--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SampleApp</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
+    <meta charset="utf-8">   
+    <!--<meta name="viewport" content="width=device-width,initial-scale=1">-->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
